laborations/lab2/testsuite/good/core110.cc
int main() {
  printInt(24);
  return 0;
}

//void printInt(int x) { }
