laborations/lab2/testsuite/bad/bad/redecl_fun_built_in.cc
void printInt(int x) {}

int main() {
  printInt(5);

  return 0;
}
